Feature:Added a few lines in super heroes

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <li>Iron man</li>
         <li>Captain Marvel</li>
         <li>Thor</li>
+        <li>Hulk</li>
+        <li>Spider man</li>
     </body>
 </html>
